Added static alarm text

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div>
             <h1>The Josephine Clock</h1>
             <p id="clock" class="clock"></p>
+            <p>No Alarms Set</p>
         </div>
 
         <script src="js/clock.js"></script>
