--- a/index.html
+++ b/index.html
@@ -6,14 +6,22 @@
         <link href="css/clock.css" rel="stylesheet" type="text/css" />
     </head>
 
-    <body onload="getTime();">
+    <body onload="getTime(); getTemp();">
 
-        <div>
+        <div class="box">
+
             <h1>The Josephine Clock</h1>
-            <p id="clock" class="clock"></p>
-            <p>No Alarms Set</p>
+
+            <div id="clock" class="clock"></div>
+
+            <div id="forecastLabel"></div>
+            <img id="forecastIcon" alt="weather icon" />
+
+            <div>No Alarms Set</div>
+
         </div>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="js/clock.js"></script>
 
     </body>
