Added div for location (still hardcoded), simplified logic for getTempColor

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
             <h1>The Josephine Clock</h1>
 
-            <div id="clock" class="clock"></div>
+            <div id="clock"></div>
 
             <div id="forecastLabel"></div>
-            <img id="forecastIcon" alt="weather icon" />
+            <div id="forecastLocation"></div>
+            <img id="forecastIcon" alt="" />
 
             <div>No Alarms Set</div>
 
