--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="css/alarm.css" rel="stylesheet" type="text/css">
     </head>
 
-    <body onload="initTimeContainer(); getTime(); getTemp();">
+    <body>
 
         <div class="box">
 
@@ -51,6 +51,7 @@
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="http://www.parsecdn.com/js/parse-1.3.4.min.js"></script>
         <script src="js/clock.js"></script>
 
     </body>
