--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                     <h2>Alarms</h2>
                     <input type="button" class="button" value="Add Alarm" onclick="showAlarmPopup();">
                 </div>
-                <div id="alarms"></div>
+                <div id="alarms">
+                    <div id="noAlarms" class="hide">No Alarms Set</div>
+                </div>
             </div>
 
             <div id="mask" class="hide"></div>
