Changed name of clock, added scope to Google+ signin

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>The Josephine Clock</title>
+        <title>My Clock</title>
         <link href="css/clock.css" rel="stylesheet" type="text/css">
         <link href="css/alarm.css" rel="stylesheet" type="text/css">
         <script src="https://apis.google.com/js/client:platform.js" async defer></script>
@@ -12,7 +12,7 @@
 
         <div class="box">
 
-            <h1>The Josephine Clock</h1>
+            <h1>My Clock</h1>
 
             <div id="clock"></div>
 
@@ -32,7 +32,7 @@
                         data-clientid="175054779113-7kq231gnlc5671dfqc1m2smav7dbfhad.apps.googleusercontent.com"
                         data-cookiepolicy="single_host_origin"
                         data-requestvisibleactions="http://schema.org/AddAction"
-                        data-scope="https://www.googleapis.com/auth/plus.login">
+                        data-scope="profile https://www.googleapis.com/auth/plus.login">
                     </span>
                 </span>
                 <div id="alarms">
