Removed scope from Google+ signin, added gapi.client.load

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         data-clientid="175054779113-7kq231gnlc5671dfqc1m2smav7dbfhad.apps.googleusercontent.com"
                         data-cookiepolicy="single_host_origin"
                         data-requestvisibleactions="http://schema.org/AddAction"
-                        data-scope="profile https://www.googleapis.com/auth/plus.login">
+                        data-scope="https://www.googleapis.com/auth/plus.login">
                     </span>
                 </span>
                 <div id="alarms">
