--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
             <div id="alarmContainer">
                 <div id="alarmHeader" class="flexable">
                     <h2>Alarms</h2>
-                    <input type="button" class="button" value="Add Alarm" onclick="showAlarmPopup();">
-                </div>
-                <span id="signinButton">
-                    <span
-                        class="g-signin"
-                        data-callback="signinCallback"
-                        data-clientid="175054779113-7kq231gnlc5671dfqc1m2smav7dbfhad.apps.googleusercontent.com"
-                        data-cookiepolicy="single_host_origin"
-                        data-requestvisibleactions="http://schema.org/AddAction"
-                        data-scope="https://www.googleapis.com/auth/plus.login">
+                    <input id="addAlarm" type="button" class="button" value="Add Alarm" onclick="showAlarmPopup();">
+                    <span id="signinButton">
+                        <span
+                            class="g-signin"
+                            data-callback="signinCallback"
+                            data-clientid="175054779113-7kq231gnlc5671dfqc1m2smav7dbfhad.apps.googleusercontent.com"
+                            data-cookiepolicy="single_host_origin"
+                            data-requestvisibleactions="http://schema.org/AddAction"
+                            data-scope="https://www.googleapis.com/auth/plus.login">
+                        </span>
                     </span>
-                </span>
+                </div>
                 <div id="alarms">
                     <div id="noAlarms" class="hide">No Alarms Set</div>
                 </div>
