--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <div id="alarmContainer">
                 <div id="alarmHeader" class="flexable">
                     <h2>Alarms</h2>
-                    <input id="addAlarm" type="button" class="button" value="Add Alarm" onclick="showAlarmPopup();">
+                    <input id="addAlarm" type="button" class="button hide" value="Add Alarm" onclick="showAlarmPopup();">
+                    <input id="signoutButton" type="button" class="button hide" value="Sign Out" onclick="gapi.auth.signOut();">
                     <span id="signinButton">
                         <span
                             class="g-signin"
