--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
             <div id="alarmContainer">
                 <div id="alarmHeader" class="flexable">
                     <h2>Alarms</h2>
-                    <input id="addAlarm" type="button" class="button hide" value="Add Alarm" onclick="showAlarmPopup();">
-                    <input id="signoutButton" type="button" class="button hide" value="Sign Out" onclick="gapi.auth.signOut();">
-                    <span id="signinButton">
-                        <span
-                            class="g-signin"
-                            data-callback="signinCallback"
-                            data-clientid="175054779113-7kq231gnlc5671dfqc1m2smav7dbfhad.apps.googleusercontent.com"
-                            data-cookiepolicy="single_host_origin"
-                            data-requestvisibleactions="http://schema.org/AddAction"
-                            data-scope="https://www.googleapis.com/auth/plus.login">
+                    <span class="flexable">
+                        <input id="addAlarm" type="button" class="button hide" value="Add Alarm" onclick="showAlarmPopup();">
+                        <input id="signoutButton" type="button" class="button hide" value="Sign Out" onclick="gapi.auth.signOut();">
+                        <span id="signinButton">
+                            <span
+                                class="g-signin"
+                                data-callback="signinCallback"
+                                data-clientid="175054779113-7kq231gnlc5671dfqc1m2smav7dbfhad.apps.googleusercontent.com"
+                                data-cookiepolicy="single_host_origin"
+                                data-requestvisibleactions="http://schema.org/AddAction"
+                                data-scope="https://www.googleapis.com/auth/plus.login">
+                            </span>
                         </span>
                     </span>
                 </div>
