--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <div id="alarmHeader" class="flexable">
                     <h2>Alarms</h2>
                     <span class="flexable">
-                        <input id="addAlarm" type="button" class="button hide" value="Add Alarm" onclick="showAlarmPopup();">
-                        <input id="signoutButton" type="button" class="button hide" value="Sign Out" onclick="signout();">
+                        <input id="addAlarm" type="button" class="hide button" value="Add Alarm" onclick="showAlarmPopup();">
+                        <input id="signoutButton" type="button" class="hide button" value="Sign Out" onclick="gapi.auth.signOut();">
                         <span id="signinButton">
                             <span
                                 class="g-signin"
