Moved click event from HTML to jquery

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <h2>Alarms</h2>
                     <span class="flexable">
                         <input id="addAlarm" type="button" class="button hide" value="Add Alarm" onclick="showAlarmPopup();">
-                        <input id="signoutButton" type="button" class="button hide" value="Sign Out" onclick="gapi.auth.signOut();">
+                        <input id="signoutButton" type="button" class="button hide" value="Sign Out">
                         <span id="signinButton">
                             <span
                                 class="g-signin"
