--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <span class="flexable">
                         <input id="addAlarm" type="button" class="button hide" value="Add Alarm" onclick="showAlarmPopup();">
                         <input id="signoutButton" type="button" class="button hide" value="Sign Out">
-                        <span id="signinButton">
+                        <span id="signinButton" class="hide">
                             <span
                                 class="g-signin"
                                 data-callback="signinCallback"
