Use id for title h1 (there are two h1's on the page...)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div class="box">
 
-            <h1>My Clock</h1>
+            <h1 id="title">My Clock</h1>
 
             <div id="clock"></div>
 
