--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
         <link href="css/clock.css" rel="stylesheet" type="text/css">
         <link href="css/alarm.css" rel="stylesheet" type="text/css">
         <script src="https://apis.google.com/js/client:platform.js" async defer></script>
+
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-60080328-1', 'auto');
+            ga('send', 'pageview');
+        </script>
+
     </head>
 
     <body>
@@ -69,6 +80,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="http://www.parsecdn.com/js/parse-1.3.4.min.js"></script>
         <script src="js/clock.js"></script>
+        <script src="http://cdn.optimizely.com/js/2528300255.js"></script>
 
     </body>
 
