Show addAlarm and signoutButton by default

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <div id="alarmHeader" class="flexable">
                     <h2>Alarms</h2>
                     <span class="flexable">
-                        <input id="addAlarm" type="button" class="button hide" value="Add Alarm" onclick="showAlarmPopup();">
-                        <input id="signoutButton" type="button" class="button hide" value="Sign Out">
+                        <input id="addAlarm" type="button" class="button" value="Add Alarm" onclick="showAlarmPopup();">
+                        <input id="signoutButton" type="button" class="button" value="Sign Out">
                         <span id="signinButton" class="hide">
                             <span
                                 class="g-signin"
