--- a/lib/redirect.html
+++ b/lib/redirect.html
@@ -6,6 +6,7 @@
 </head>
 
 <body onload="redirect_init();">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="redirect.js"></script>
 </body>
 
