Added error callback to ajax call

--- a/lib/index.html
+++ b/lib/index.html
@@ -29,6 +29,10 @@
                         console.log(response);
                         alert(response['data']['url']);
                     },
+                    error: function(xhr, status, error) {
+                        console.log(status);
+                        console.log(error);
+                    },
                     beforeSend: function(xhr) {
                         console.log('beforeSend');
                         console.log(localStorage['access_token']);
