Fixed request header

--- a/lib/index.html
+++ b/lib/index.html
@@ -19,13 +19,11 @@
             client_id         : '8c345d266bd5718',
             type              : 'token',
             callback_function : function() {
-                console.log('callback_function');
                 $.ajax({
                     url: 'https://api.imgur.com/3/account/me',
                     type: 'GET',
                     dataType: 'json',
                     success: function(response) {
-                        console.log('response');
                         console.log(response);
                         alert(response['data']['url']);
                     },
@@ -34,9 +32,7 @@
                         console.log(error);
                     },
                     beforeSend: function(xhr) {
-                        console.log('beforeSend');
-                        console.log(localStorage['access_token']);
-                        xhr.setRequestHeader('Authorization: Bearer', localStorage['access_token']);
+                        xhr.setRequestHeader('Authorization', 'Bearer ' + localStorage['access_token']);
                     }
                 });
             }
