--- a/lib/index.html
+++ b/lib/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-    <button onclick="login();">Imgur</button>
+    <button onclick="login();">Login</button>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="oauth.js"></script>
